--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
         const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InlueG1heHhxZWtzbmxud2N2ZGtrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTM3ODUxOTEsImV4cCI6MjA2OTM2MTE5MX0.wWnkkoNjegxWiA53IaBhGML7P2ADEklPEHTwX67X4Dg'; // e.g., 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...'
 
         // Initialize Supabase Client
-        const supabase = SUPABASE_URL === 'YOUR_SUPABASE_URL' || SUPABASE_ANON_KEY === 'YOUR_SUPABASE_ANON_KEY'
+        const supabase = SUPABASE_URL === 'https://ynxmaxxqeksnlnwcvdkk.supabase.co' || SUPABASE_ANON_KEY === 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InlueG1heHhxZWtzbmxud2N2ZGtrIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTM3ODUxOTEsImV4cCI6MjA2OTM2MTE5MX0.wWnkkoNjegxWiA53IaBhGML7P2ADEklPEHTwX67X4Dg'
             ? null // Supabase not configured, will operate in IndexedDB-only mode
             : Supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
